
	* libdw_find_split_unit.c (try_split_file): Make static.
	* dwarf_entrypc.c (dwarf_entrypc): Call dwarf_lowpc.
	* dwarf_ranges.c (dwarf_ranges): Use skeleton ranges section for
	skeleton units.
	* dwarf_macro_param2.c (dwarf_macro_param2): Change form condition to
	switch statement and add DW_FORM_line_strp, DW_FORM_strp_sup,
	DW_FORM_strx, and DW_FORM_strx[1-4].

2023-02-22  Mark Wielaard  <mark@klomp.org>

	* dwarf_getscopes.c (origin_match): Don't free a->scopes.
	(dwarf_getscopes): Free a->scopes on error.

2023-02-20  Mark Wielaard  <mark@klomp.org>

	* dwarf_begin_elf.c (check_section): Use elf_rawdata.

2023-02-14  Mark Wielaard  <mark@klomp.org>

	* dwarf_getlocation.c (__libdw_intern_expression): Correct check
	for deref_type.

2023-02-10  Mark Wielaard  <mark@klomp.org>

	* dwarf_getlocation.c (__libdw_intern_expression): Handle
	DW_OP_GNU_uninit.

2023-02-12  Mark Wielaard  <mark@klomp.org>

	* cfi.c (execute_cfi): Add cfi_asser before reading second lib128.
	* dwarf_chld.c (__libdw_find_attr): Check readp >= endp before
	calling get_uleb128.
	* dwarf_frame_register.c (dwarf_frame_register): Likewise for
	p >= end.
	* dwarf_getabbrev.c (__libdw_getabbrev): Add comment about check.
	* dwarf_getlocation.c (__libdw_intern_expression): Update check to
	account for both the number and uleb128.
	* encoded-value.h (read_encoded_value): Check p >= end for
	DW_EH_PE_(u|s)leb128.
	* fde.c (intern_fde): Check len can be read as uleb128.
	* libdw_form.c (__libdw_form_val_compute_len): Check valp >= endp
	before get_uleb128.

2023-01-22  Mark Wielaard  <mark@klomp.org>

	* dwarf_getscopes.c (pc_record): Return nscopes when done.
	(dwarf_getscopes): Call __libdw_visit_scopes with
	inlined_origin CU.

2022-12-20  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (AM_CPPFLAGS): Add -I$(srcdir)/../libebl.
	* cfi.c: Include libebl.h.
	* encoded-value.h: Likewise.
	* frame-cache.h: Likewise.

2022-10-21  Yonggang Luo  <luoyonggang@gmail.com>
